# bitcraft_companion

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN_DOC.md  DESIGN_DOC_WEB.md  DISCUSSION_SUMMARY.md  LICENSE  README.md  ROADMAP.md  bitcraft_companion.spec  generate_version.py  integration_examples.py  migration.md  migration_status.py  pyproject.toml  version_info.txt
.github/: README.md  dependabot.yml
.github/workflows/: dev-validation.yml  pr-checks.yml  release.yml
app/: active_crafting_service.py  active_crafting_tab.py  base_overlay.py  base_window.py  claim.py  claim_info_header.py  claim_inventory_tab.py  claim_manager.py  client.py  data_manager.py  inventory_service.py  inventory_tab.py  inventory_window.py  main.py  main_window.py  overlay.py  passive_crafting_service.py  passive_crafting_tab.py  passive_crafting_timer_overlay.py  passive_crafting_window.py  player.py  traveler_tasks_service.py  traveler_tasks_tab.py
app/client/: __init__.py  bitcraft_client.py  query_service.py
app/core/: __init__.py  data_paths.py  data_service.py  message_router.py
app/data/: data.db
app/models/: __init__.py  claim.py  player.py  (+2 more)
tests/: README.md  conftest.py  test_bitcraft_client.py  test_data_service_integration.py  test_integration.py  test_item_lookup_compound_keys.py  test_item_lookup_service.py  test_main_window.py  test_main_window_loading.py  test_message_router.py  test_modules.py  test_notification_system.py  test_player.py  test_processors.py  test_query_service.py  test_saved_search_service.py  test_search_parser_multiple_conditions.py  test_simple.py  test_ui_tabs.py
(+64 files in other folders)
