[tool.poetry]
name = "app"
version = "0.2.33"
description = ""
authors = ["Hatchet Jackk <helloitsyourdadcube@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
websockets = "^15.0.1"
requests = "^2.32.4"
openpyxl = "^3.1.5"
keyring = "^25.6.0"
customtkinter = "^5.2.2"
plyer = "^2.1.0"
packaging = "^24.0"
pillow = "^11.3.0"
python-dotenv = "^1.1.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.10.0"
pyinstaller = "^6.14.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["app"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
